--- a/rianoble.yml
+++ b/rianoble.yml
@@ -5,15 +5,15 @@ website:
   title: "Your_Name Data Science Portfolio"
   favicon: Images/favicon.png
   back-to-top-navigation: true
-  repo-url: https://github.com/your_url
+  repo-url: https://github.com/rianoble
   #repo-actions: [issue] #if you want to allow others to report issues on your site uncomment this line
 
   page-footer: 
     border: true
-    left: "Your_Name 2023©"
+    left: "Ria Noble"
     right: 
       - icon: linkedin
-        href: Your_LinkedIn_URL
+        href: https://www.linkedin.com/in/ria-noble-963178239/
 
   navbar:
     background: primary
